Fixed minor CSS issues with IE font, header tweet margin-top spacing and broken image links on Hello World blog post.

--- a/src/documents/styles/style.css
+++ b/src/documents/styles/style.css
@@ -59,7 +59,7 @@ hr{
 	color:#fff;
 }
 .conf_logo{
-	font-family: LetterGothicStd;
+	font-family: 'LetterGothicStd', arial;
 	font-size: 33px;
 }
 .pic {
